clusters/apps/env/production/media/deemix/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: deemix
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: deemix.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`deemix.${FAMILY_DOMAIN}`)"
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
      priority: 10
      services:
        - name: deemix
          port: 6595
    - kind: Rule
      match: "Host(`deemix.${FAMILY_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
          port: 9000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: deemix.${FAMILY_DOMAIN}
